# python-workshop-am

./: README.md  config.yaml  dev.py  main.py  pyproject.toml  requirements.txt  wsgi.py
static/: README.md
templates/: index.html
